[package]
name = "semaphore-rs"
version = "0.1.0"
edition = "2021"

[dependencies]
reqwest = { version = "0.12", features = ["cookies", "json"] }
serde = { version = "^1.0", features = ["derive"] }
serde_json = { version = "^1.0" }
tabled = { version = "^0.17", optional = true }
tokio = { version = "1", features = ["full"] }

[features]
default = []
tabled = ["dep:tabled"]